<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (m)</string>
    <string name="picture">Profile picture</string>
    <string name="bmi">BMI</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="status">Status</string>
    <string name="normal">Normal</string>
    <string name="under">Under Weight</string>
    <string name="over">Over Weight</string>
</resources>
